Don't allow import of investment transactions that don't have a share amount. This used to end in a div by zero when calculating the price.

BUG: 234797

svn path=/trunk/playground/office/kmymoney/; revision=1121068